kubernetes/deployment.yaml
# deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "flowise"
  labels:
    app: "flowise"
spec:
  selector:
    matchLabels:
      app: "flowise"
  replicas: 1
  template:
    metadata:
      labels:
        app: "flowise"
    spec:
      containers:
      - name: "flowise"
        image: "gcr.io/trending-threats/github.com/fletch-ai/flowise"
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 1
            memory: "1Gi"
        volumeMounts:
        - name: flowise-volume
          mountPath: /opt/flowise
      volumes:
      - name: flowise-volume
        persistentVolumeClaim:
          claimName: flowise-pvc
